fix overflow

--- a/positioning/positioning/positionstyles.css
+++ b/positioning/positioning/positionstyles.css
@@ -159,7 +159,7 @@
   display: grid;
   height: 400px;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 .red6 {
   width: 100%; 
@@ -174,7 +174,7 @@
   width: 100%; 
   height: 100%; 
   background-color: green;
-  grid-row: 5/7;
+  grid-row: 5/8;
   grid-column: 1/3;
   z-index: 3;
 } 
@@ -182,7 +182,7 @@
   width: 100%; 
   height: 100%; 
   background-color: gold;
-  grid-row: 3/7;
+  grid-row: 4/8;
   grid-column: 5/7;
   z-index: 4;
 
@@ -191,7 +191,7 @@
   width: 100%; 
   height: 100%; 
   background-color: blue; 
-  grid-row: 2/6;
+  grid-row: 2/7;
   grid-column: 2/6;
   z-index: 2;
 } 
